--- a/reporting/Lin_ST559_Presentation.Rmd
+++ b/reporting/Lin_ST559_Presentation.Rmd
@@ -298,7 +298,7 @@ $$
 p(\theta_j|y), j = 1,..., |\theta|, \ \ \ \ \ p(x_i | y), \ i = 1,...,n. 
 $$
 
-The posterior marginals of interest can be written as 
+The posterior marginals of (each element of) interest can be obtained by 
 $$
 p(\theta_j|y) = \int p(\theta|y) d\theta_{-j}, 
 $$
@@ -319,7 +319,7 @@ $$
 $$
 where $\tilde{p}(\cdot|\cdot)$ is an approximated conditional density of its arguments.
 
-- Approximation to $p(\theta_j|y)$ is computed by integrating out $\theta_{-j}$ from $\tilde{p}(\theta_j|y)$. 
+- Approximation to $p(\theta_j|y)$ is computed by integrating out the remaining parameters $\theta_{-j}$ from $\tilde{p}(\theta|y)$. 
 
 - Approximations to $p(x_i | y)$ are computed by approximating  $p(x_i|\theta,y)$ and $p(\theta|y)$ and using numerical integration to integrate out $\theta$ (Rue et al., 2009). 
 
@@ -365,7 +365,7 @@ To approximate $p(\theta_j|y)$, the following steps are involved (Rue et al., 20
 
 3. explore $\log(\tilde{p}(\theta|y))$ to locate the bulk of the probability mass using the z-parameterization.
 
-4. approximate $p(\theta_j|y)$ by using the points that were already computed during steps 1-3 to construct an interpolant to $\log(\tilde{p}(\theta|y))$ and compute marginals using numerical integration such as Newton–Raphson method from this $\log(\tilde{p}(\theta|y))$. 
+4. approximate $p(\theta_j|y)$ by using the points that were already computed during steps 1-3 to construct an interpolant to $\log(\tilde{p}(\theta|y))$ and compute marginals using numerical integration such as Newton–Raphson method from this interpolant. 
 
 
 ## Approximating the Posterior Marginals for the Latent Field
