--- a/reporting/Appendix.Rmd
+++ b/reporting/Appendix.Rmd
@@ -52,7 +52,7 @@ For this data set, an universal kriging model and a continuous spatial process w
 
 The steps for fitting an universal kriging model include: (1) convert the `data.frame` objaction to a `SpatialPointsDataFrame` object, (2) calculate the empirical/sample variogram and fit a spherical variogram model to the sample variogram, and (3) fit the universal kriging model using the fitted variogram. The steps for fitting the SPDE model are more involved. These steps include: (1) define the boundary and create a mash to approximate the continuous GF (Gaussian field) as a discrete GMRF (Gaussian Markov random field), (2) make the latent model/create a SPDE model on the mesh, (3) make a projection matrix $A$ to map the F from the observed points to the triangulation vertices, (4) organize the data to be in a particular format for estimation and prediction and join stacks of data, (5) fit the model. 
 
-Results show that the universal kriging and the SPDE model provide similar estimates. For the fitted variogram model, sill (or variance) $= 0.2053$, nugget (i.e., variance when distance $= 0$) $= 0.07643$, and range $= 728.7$. For the SPDE model, mean variance $= 0.2351$ with $Q1 = 0.183$ and $Q3 = 0.2754$, and max range $= 955.8$ (This value is a bit higher than expected). 
+Results show that the universal kriging and the SPDE model provide similar estimates. For the fitted variogram model, sill (or variance) $= 0.2053$, nugget (i.e., variance when distance $= 0$) $= 0.07643$, and range (i.e. the distance after which the variogram levels off) $= 728.7$. For the SPDE model, mean variance $= 0.2351$ with $Q1 = 0.183$ and $Q3 = 0.2754$, and max range $= 955.8$ (This value is a bit higher than expected). 
 
 ```{r echo=FALSE, message=FALSE}
 fit.vgm <- readRDS(here("results", "fit.vgm.rds"))
